extend test cases