@@ -3,13 +3,9 @@ package org.molgenis.emx2.web.service;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
-import org.molgenis.emx2.Query;
-import org.molgenis.emx2.Row;
-import org.molgenis.emx2.Schema;
-import org.molgenis.emx2.Table;
+import org.molgenis.emx2.*;
 
 public class CatalogueSiteMapTest {
 
@@ -18,7 +14,11 @@ public class CatalogueSiteMapTest {
     Schema schema = mock(Schema.class);
     Table table = mock(Table.class);
     Query query = mock(Query.class);
-    List<Row> row = Collections.singletonList(new Row("id", "my-id", "type", "Data source"));
+    List<Row> row =
+        List.of(
+            new Row("id", "my-id", "type", "Data source"),
+            new Row("id", "my-second-id", "type", "Network"));
+
     when(schema.getTable("Resources")).thenReturn(table);
     when(table.select(any(), any())).thenReturn(query);
     when(query.retrieveRows()).thenReturn(row);
@@ -30,7 +30,22 @@ public class CatalogueSiteMapTest {
             + "  <url>\n"
             + "    <loc>https://my/base/url/catalogue/all/collections/my-id</loc>\n"
             + "  </url>\n"
+            + "  <url>\n"
+            + "    <loc>https://my/base/url/catalogue/all/networks/my-second-id</loc>\n"
+            + "  </url>\n"
             + "</urlset>";
     assertEquals(expected, catalogueSiteMap.buildSiteMap());
+  }
+
+  @Test
+  public void buildSiteMapWhenExpectedTableIsMissing() {
+    Schema schema = mock(Schema.class);
+    Table table = mock(Table.class);
+    Query query = mock(Query.class);
+
+    when(table.select(any(), any())).thenReturn(query);
+
+    CatalogueSiteMap catalogueSiteMap = new CatalogueSiteMap(schema, "https://my/base/url");
+    assertThrows(MolgenisException.class, catalogueSiteMap::buildSiteMap);
   }
 }
